缓存功能研发完成